Add comment for future reference in index.html

--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
 
         </style>
 
+        <!-- // wdewqdwqad -->
+
      <!--   <script async src="https://api.countapi.xyz/hit/pdtotem/01b6e291-5259-414f-b6f9-f73446100a60?callback=websiteVisits"></script> -->
 
   </head>
